# operating-systems-task-4

./: CMakeLists.txt  README.md
04_05_basic/: server.c  utils.h
06_07_display/: gardener.c  server.c  utils.h
08_multi_display/: display.c  garden.c  params.h  server.c
